@@ -5305,5 +5305,83 @@
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
+  },
+  {
+    "id": 185,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "Half of an ancient tablet found at the peak of an ancient tree.\nThe complete artifact can break the seal on True Telluria Castle.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 246,
+    "itypeId": 2,
+    "name": "Golden Tablet Piece (Left)",
+    "note": "<Cannot Discard>",
+    "occasion": 3,
+    "price": 0,
+    "repeats": 1,
+    "scope": 0,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
+  },
+  {
+    "id": 186,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "Half of an ancient tablet found within a frozen labyrinth.\nThe complete artifact can break the seal on True Telluria Castle.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 247,
+    "itypeId": 2,
+    "name": "Golden Tablet Piece (Right)",
+    "note": "<Cannot Discard>",
+    "occasion": 3,
+    "price": 0,
+    "repeats": 1,
+    "scope": 0,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
+  },
+  {
+    "id": 187,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "A powerful ancient artifact created and split into two by a group\nof mages 1000 years ago. Can break the seal on True Telluria Castle.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 245,
+    "itypeId": 2,
+    "name": "Golden Tablet",
+    "note": "<Cannot Discard>",
+    "occasion": 3,
+    "price": 0,
+    "repeats": 1,
+    "scope": 0,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
   }
 ]
