@@ -24,7 +24,7 @@ Additions:
    > Resurgence: Magic skill learned at level 25.
   ~ Player 4, 0 skills:
    > 
- - Added 24 new items:
+ - Added 27 new items:
   ~ 1 recovery item:
    > Water Jug
   ~ 10 materials:
@@ -47,7 +47,10 @@ Additions:
    > MRG Scroll
    > EXR Scroll
    > MCR Scroll
-  ~ 2 miscellaneous:
+  ~ 5 miscellaneous:
+   > Golden Tablet Piece (Left)
+   > Golden Tablet Piece (Right)
+   > Golden Tablet
    > Tellurium Pickaxe
    > Andrew's Ancient Crystal of The Trail's Amazing History
  - Added 45 new equipment items:
